--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="shortcut icon" href="https://pngimg.com/uploads/netflix/netflix_PNG10.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -19,7 +18,7 @@
     }
   </style>
 
-  <title>Admin Dashboard</title>
+  <title>Netflix Admin</title>
 </head>
 
 <body>
